    Closes: #300278
  * Bug fix: "Hints generator default width initializer checks wrong
    variable", thanks to Tyson Whitehead (Closes: #368609).
  * Bug fix: "Type1 hints generator roman family does not default to
    serif", thanks to Tyson Whitehead again (Closes: #368611).
  * Reword much of defoma.1 to improve a few engrish phrases,
    closes: #269035.
  * Bug fix: "incorrect example in defoma-script.sgml", thanks to Matej
    Vela (Closes: #307305).

 --

defoma (0.11.8-0.1) unstable; urgency=high

  * NMU
  * Apply patch by Jurij Smakov to fix redirecting the output
    streams (Closes: #263270)

 -- Frank Lichtenheld <djpig@debian.org>  Sat, 21 Aug 2004 19:27:43 +0200

defoma (0.11.8) unstable; urgency=low

  * Fix some typos and engrish in dfontmgr.1, closes: #234329.
  * Correct some misspellings of "Generator", closes: #235722.
  * defoma-hints.1: Add explanation of command line options.
    Closes: #235723
  * Bug fix: "defoma-hints --no-question still displays some messages",
    thanks to Flavio Stanchina (Closes: #244092).  Also fixed similar
    problem with libhint-type1.perl.
  * Bug fix: "defoma: --no-question asks questions" (Closes: #248942)

 -- Angus Lees <gus@debian.org>  Tue, 25 May 2004 20:45:29 +1000

defoma (0.11.7) unstable; urgency=low

  * dh_installdefoma: remove call to checkdepends(), which was deleted in
    0.11.6. oops. Closes: #229230.

 -- Angus Lees <angus.lees@urnet.com.au>  Tue, 27 Jan 2004 13:44:53 +1100

defoma (0.11.6) unstable; urgency=low

  * Update defoma-hints.fr.1 to include --no-question too, closes: #212626.
  * Upgrade defoma libft-perl dependency to "Recommends", closes: #222290.
  * Remove version checking code from dh_installdefoma - it should be a
    lintian check, if anything.
  * Actually send "unregister" messages to defoma app scripts.  I hoped
    this would help #179099, but it doesn't seem to :(

 -- Angus Lees <gus@debian.org>  Sat,  3 Jan 2004 12:16:04 +1100
