@@ -1,2 +1,3 @@
 man/*.1
 man/*.3pm
+man/*.8
