@@ -1,2 +1,2 @@
-?package(dfontmgr):needs=X11 section="Apps/System"\
+?package(dfontmgr):needs="x11" section="Apps/System"\
   title="Dfontmgr" command="/usr/bin/dfontmgr"
