@@ -1,0 +1,3 @@
+psfontmgr/src/*			usr/bin
+psfontmgr/libs/*		usr/share/defoma
+debian/psfontmgr.defoma		usr/share/defoma/scripts
