@@ -5,13 +5,6 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# This is the debhelper compatability version to use.
-export DH_COMPAT=2
-
-IDIR1=`pwd`/debian/defoma
-IDIR2=`pwd`/debian/psfontmgr
-IDIR3=`pwd`/debian/defoma-doc
-IDIR4=`pwd`/debian/dfontmgr
 
 build-arch:
 #	nothing to do
@@ -48,25 +41,8 @@ install: build-indep
 	dh_clean -k
 	dh_installdirs
 
-	install -m 755 src/* $(IDIR1)/usr/bin
-	install -m 644 pm/Defoma/*.pm $(IDIR1)/usr/share/perl5/Debian/Defoma
-	install -m 644 libs/* $(IDIR1)/usr/share/defoma
-	chmod +x $(IDIR1)/usr/share/defoma/defoma-test.sh
-	install -m 644 conf/* $(IDIR1)/etc/defoma
-	install -m 644 debhelper-files/* $(IDIR1)/usr/share/debhelper/autoscripts
-	install -m 644 examples/* $(IDIR1)/usr/share/doc/defoma/examples
-
-	install -m 755 psfontmgr/src/* $(IDIR2)/usr/bin
-	install -m 644 psfontmgr/libs/* $(IDIR2)/usr/share/defoma
-	install -m 644 debian/psfontmgr.defoma $(IDIR2)/usr/share/defoma/scripts
-
-	cp -r build/* $(IDIR3)/usr/share/doc/defoma-doc
-	install -m 644 doc/* $(IDIR3)/usr/share/doc/defoma-doc
-
-	install -m 644 dfontmgr/libs/* $(IDIR4)/usr/share/defoma
-	install -m 644 dfontmgr/Dfontmgr/*.pm $(IDIR4)/usr/share/perl5/Debian/Dfontmgr
-	install -m 644 dfontmgr/DefomaWizard/*.pm $(IDIR4)/usr/share/perl5/Debian/DefomaWizard
-	install -m 755 dfontmgr/Dfontmgr/dfontmgr $(IDIR4)/usr/bin
+	dh_install
+	chmod +x $(CURDIR)/debian/defoma/usr/share/defoma/defoma-test.sh
 
 
 # Build architecture-independent files here.
